Update FCharacter component

--- a/src/test/resources/org/flywind/widgets/test/pages/FAjaxUploadTest_zh_CN.properties
+++ b/src/test/resources/org/flywind/widgets/test/pages/FAjaxUploadTest_zh_CN.properties
@@ -5,6 +5,7 @@ grid-default=默认
 grid-default-prefix=默认前缀
 grid-since=版本开始
 grid-desc=描述
+grid-info=例子的源码可看下面的文档，如果您还有不明白的地方，可加入QQ技术群：41138107（人数较多最好先加这个）或33106572
 
 
 compoment-desc=FAjaxUpload组件,Ajax上传组件参数如下:
