--- a/src/test/resources/org/flywind/widgets/test/pages/FArtDialogTest_en.properties
+++ b/src/test/resources/org/flywind/widgets/test/pages/FArtDialogTest_en.properties
@@ -5,6 +5,7 @@ grid-default=Default
 grid-default-prefix=Default Prefix
 grid-since=Since
 grid-desc=Desc
+grid-info=QQ groups:41138107 or 33106572
 
 compoment-desc=FArtDialog,FArtDialogClose,FArtDialogLink based on http://demo.jb51.net/js/2011/artDialog/_doc/labs.html
 
