--- a/src/test/resources/org/flywind/widgets/test/pages/FTagsinputTest_zh_CN.properties
+++ b/src/test/resources/org/flywind/widgets/test/pages/FTagsinputTest_zh_CN.properties
@@ -8,6 +8,6 @@ grid-desc=描述
 grid-info=例子的源码可看下面的文档，如果您还有不明白的地方，可加入QQ技术群：41138107（人数较多最好先加这个）或33106572
 
 
-compoment-desc=FTagsField 组件基于Bootstrap tagsinput组件. Component params:. 组件参数:
+compoment-desc=FTagsinput 组件基于Bootstrap tagsinput组件. Component params:. 组件参数:
 
-desc1=FTagsField params document:http://bootstrap-tagsinput.github.io/bootstrap-tagsinput/examples/
+desc1=FTagsinput params document http://bootstrap-tagsinput.github.io/bootstrap-tagsinput/examples/
