Summernote图片上传不支持中文名，增加提示框

--- a/src/main/resources/org/flywind/widgets/mixins/FSummernote_en.properties
+++ b/src/main/resources/org/flywind/widgets/mixins/FSummernote_en.properties
@@ -1,2 +1,3 @@
 modalImageTitle=Warning
 modalImageContent=Upload failed, file size can not exceed
+modalImageText=Failed to upload, please use English, numbers, or the number of English documents
